// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkdownFormatter base template output matches snapshot 1`] = `
"# Context Guardian Playbook

> **Generated**: 2024-01-01T00:00:00Z  
> **Project**: Snapshot Test Project


## Project Context

**Dependencies**: 2 libraries analyzed  
**Rules**: 3 best practices identified  
**Critical Issues**: 1  
**Security Advisories**: 1

### Detected Patterns

- **Frameworks**: React
- **State Management**: Redux
- **Component Style**: functional

---

## Critical Rules

### Test Critical Rule

**Library**: react   
**Category**: security  
**Type**: security

This is a critical security issue



---

✅ No critical issues found.

---

## High Priority Rules

### Test High Rule

**Library**: react   
**Category**: performance

This is a high priority rule



---

## Medium Priority Rules

### Test Medium Rule

**Library**: express  
**Category**: best-practice

This is a medium priority rule


---

## Low Priority Rules


---

## Summary

This playbook is tailored to your project's dependencies and coding patterns. Use it to guide your AI assistant when generating or refactoring code.

**Next Steps**:
1. Review critical and high-priority rules
2. Update your code to address security issues
3. Run \`guardian sync\` to refresh this playbook when dependencies change

---

*Generated by Context Guardian v0.1.0*
"
`;

exports[`MarkdownFormatter cursor template output matches snapshot 1`] = `
"# Context Guardian Rules for Snapshot Test Project


## Project Context
- Dependencies: 2 libraries
- Rules: 3 best practices
- Critical: 1 | Security: 1

Frameworks: React
State Management: Redux

---

## 🚨 CRITICAL: Test Critical Rule

Library: react 

This is a critical security issue



## ⚠️ Test High Rule

Library: react

This is a high priority rule



## 💡 Test Medium Rule

This is a medium priority rule


---

Generated: 2024-01-01T00:00:00Z
"
`;

exports[`MarkdownFormatter offline mode output matches snapshot 1`] = `
"# Context Guardian Playbook

> **Generated**: 2024-01-01T00:00:00Z  
> **Project**: Offline Project ⚠️ *Offline Mode*

## ⚠️ Offline Mode Active

This playbook was generated using offline fallback data. It may not include:
- Latest security advisories
- Recently published best practices
- Libraries outside the top 100

Run \`guardian sync\` when online for the most up-to-date guidance.

---

## Project Context

**Dependencies**: 2 libraries analyzed  
**Rules**: 3 best practices identified  
**Critical Issues**: 1  
**Security Advisories**: 1

### Detected Patterns

- **Frameworks**: React
- **State Management**: Redux
- **Component Style**: functional

---

## Critical Rules

### Test Critical Rule

**Library**: react   
**Category**: security  
**Type**: security

This is a critical security issue



---

✅ No critical issues found.

---

## High Priority Rules

### Test High Rule

**Library**: react   
**Category**: performance

This is a high priority rule



---

## Medium Priority Rules

### Test Medium Rule

**Library**: express  
**Category**: best-practice

This is a medium priority rule


---

## Low Priority Rules


---

## Summary

This playbook is tailored to your project's dependencies and coding patterns. Use it to guide your AI assistant when generating or refactoring code.

**Next Steps**:
1. Review critical and high-priority rules
2. Update your code to address security issues
3. Run \`guardian sync\` to refresh this playbook when dependencies change

---

*Generated by Context Guardian v0.1.0*
"
`;
